# pyspark_mcp

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  GITHUB_READINESS_CHECKLIST.md  LICENSE  Makefile  OPTIMIZATION_ANALYSIS.md  README.md  RELEASE_NOTES_v1.0.0.md  SECURITY_AUDIT_REPORT.md  SETUP_COMPLETE.md  TESTING_GUIDE.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_server.py  test.py  test_runner.sh  test_server.py  visual_tester.py
.githooks/: README.md  install.sh  pre-push
.github/: dependabot.yml
.github/workflows/: ci-enhanced.yml  ci-old.yml  ci.yml  ci.yml.disabled  pr-validation.yml  publish.yml
docs/: PIPELINE_FIXES.md  README.md  api.md  installation.md  usage.md
docs/ci/: CI_PIPELINE_ANALYSIS.md  CI_WORKFLOW_ANALYSIS.md
pyspark_tools/: __init__.py  advanced_optimizer.py  aws_glue_integration.py  batch_processor.py  code_reviewer.py  consolidated_tools.py  data_source_analyzer.py  duplicate_detector.py  file_utils.py  memory_manager.py  resource_manager.py  server.py  sql_converter.py
scripts/: benchmark_performance.py  healthcheck.py  tag_release.sh  test_optimizer.py  test_performance_monitor.py  validate_core_functionality.py  validate_mcp_server.py  validate_performance.sh
tests/: conftest.py  test_advanced_optimizer.py  test_aws_glue_integration.py  test_batch_processor.py  test_ci_basic.py  test_consolidated_tools.py  test_data_source_analyzer.py  test_duplicate_detector.py  test_enhanced_sql_converter.py  test_file_utils.py  test_integration_mcp.py  test_minimal.py  test_optimization_features.py  test_resource_manager.py  test_server_components.py  test_sql_conversion_fixes.py
