[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspark-tools"
version = "1.0.0"
description = "FastMCP server for SQL to PySpark conversion with batch processing"
authors = [{name = "Dev", email = "dev@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.3.0",
    "sqlglot>=25.0",
    "pyspark>=3.5.0,<4.0.0",
    "sqlite-utils>=3.36",
    "pypdf>=4.0.0",
    "pdfplumber>=0.10.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyspark_tools*"]
exclude = ["tests*", "output*", "test_venv*", "test_queries*", "coverage_reports*"]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "isort>=5.12.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pytest>=8.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.12.0",
    "coverage>=7.0.0",
    "safety>=3.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
    "docker>=6.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0"
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["pyspark_tools"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"